<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <parent>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-parent</artifactId>
      <version>2.1.3.RELEASE</version>
  </parent>
  
  <groupId>com.plmm</groupId>
  <artifactId>plmm-common</artifactId>
  <version>0.1.0</version>
  <packaging>pom</packaging>
  <name>${project.artifactId}</name>
  
  <properties>
        <argline>-server -Xms64m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
            -Djava.net.preferIPv4Stack=true
        </argline>    
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <springboot.version>2.1.3.RELEASE</springboot.version>
        <dubbo-spring.version>2.0.0</dubbo-spring.version>
        <zkclient.version>0.10</zkclient.version>
        <vo-common.version>0.1.0</vo-common.version>
        <io.swagger.version>1.5.24</io.swagger.version>
        <java.version>1.8</java.version>
        <spring.version>5.1.5.RELEASE</spring.version>
		<commons-beanutils.version>1.9.3</commons-beanutils.version>
		<commons-betwixt.version>0.8</commons-betwixt.version>
		<commons-discovery.version>0.5</commons-discovery.version>
		<commons-fileupload.version>1.3.1</commons-fileupload.version>
		<commons-httpclient.version>3.1</commons-httpclient.version>
		<commons-io.version>2.4</commons-io.version>
		<commons-lang3.version>3.4</commons-lang3.version>
		<commons-lang.version>2.4</commons-lang.version>
		<commons-net.version>3.4</commons-net.version>
		<dozer.version>5.5.1</dozer.version>
		<druid.version>1.0.21</druid.version>
		<plmm-druid.version>0.1.0</plmm-druid.version>
		<fastjson.version>1.2.25.sec10</fastjson.version>
		<jedis.version>2.9.0</jedis.version>
		<jdom.version>1.1</jdom.version>
		<json-lib.version>2.4</json-lib.version>
		<mybatis-spring.version>1.2.2</mybatis-spring.version>
		<mysql-connector-java.version>8.0.15</mysql-connector-java.version>
		<poi-ooxml.version>3.17</poi-ooxml.version>
		<poi.version>3.17</poi.version>
		<quartz.version>2.2.3</quartz.version>
		<sring-boot-admin.version>1.4.5</sring-boot-admin.version>
		<plmm.version>0.1.0</plmm.version>
		<xerces.version>2.4.0</xerces.version>
		<xercesImpl.version>2.11.0</xercesImpl.version>
		<!-- <tomcat.version>8.5.28</tomcat.version> -->
		<zxing.version>2.2</zxing.version>
        <spring_boot_rocketmq.version>0.1.0</spring_boot_rocketmq.version>
        <rocketmq-client.version>4.7.0</rocketmq-client.version>
		<ehcache.version>2.10.5</ehcache.version>
        <apache.dubbo.version>2.7.5</apache.dubbo.version>
        <interface.version>0.1.0</interface.version>
        <json.version>20180130</json.version>
		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
		<geronimo-jms_1.1_spec.version>1.1.1</geronimo-jms_1.1_spec.version>
		<hessian.version>4.0.38</hessian.version>
		<httpclient.version>4.5.5</httpclient.version>
		<httpcore.version>4.4.11</httpcore.version>
		<jackson.version>2.9.5</jackson.version>
		<kafka.version>0.10.2.0</kafka.version>
		<kryo.version>4.0.0</kryo.version>
		<mybatis-spring.version>1.3.0</mybatis-spring.version>
		<mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
		<servlet.version>3.1.0</servlet.version>
		<bouncycastle.version>1.60</bouncycastle.version>
		<springfox-swagger2.version>2.9.2</springfox-swagger2.version>
		<velocity.version>1.7</velocity.version>
		<swagger-bootstrap-ui.version>1.9.6</swagger-bootstrap-ui.version>
		<apache.dubbo.version>2.7.6</apache.dubbo.version>
		<apollo.client.version>1.6.0</apollo.client.version>
		<spring-cloud-context.version>2.1.3.RELEASE</spring-cloud-context.version>
		<encrypt-offlineclient.version>0.0.1</encrypt-offlineclient.version>
		<cntp-idm-sso-api.version>0.0.1</cntp-idm-sso-api.version>
		<cntp-idm-sso-oauth2.version>1.0</cntp-idm-sso-oauth2.version>
		<guava.version>27.0.jre</guava.version>
		<dubbo-registry-nacos.version>2.7.6</dubbo-registry-nacos.version>
		<sentinel.version>1.7.2</sentinel.version>
		<commons-pool2.version>2.3</commons-pool2.version>
		<jredisclient.version>0.0.2</jredisclient.version>
		<wcc_krb5.version>1.0.2</wcc_krb5.version>
		<tprmi.version>1.0</tprmi.version>
		<sftp.version>0.1.29</sftp.version>
		<graphbase-java-client.version>1.1</graphbase-java-client.version>
		<httpmime.version>4.4.1</httpmime.version>
		<jackson-annotations.version>2.10.0.pr1</jackson-annotations.version>
		<jcl-over-slf4j.version>1.7.25</jcl-over-slf4j.version>
		<slf4j-api.version>1.7.26</slf4j-api.version>
		<slf4j-simple.version>1.7.5</slf4j-simple.version>
   </properties>

   <modules>
     <module>vo-security</module>
     <module>cryptography</module>
     <module>druid</module>
     <module>plmm-utils</module>
     <module>localcache</module>
     <module>redis</module>
	 <module>webmvc</module>
  	 <module>vo-common</module>
  	 <module>interface-common</module>
     <module>service-common</module>
    <module>web-common</module>
  </modules>
  
   <dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>interface-common</artifactId>
				<version>${interface.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>vo-common</artifactId>
				<version>${vo-common.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>druid</artifactId>
				<version>${plmm-druid.version}</version>
			</dependency>
			<!-- druid数据源依赖 -->
	        <dependency>
	            <groupId>com.alibaba</groupId>
	            <artifactId>druid</artifactId>
	            <version>${druid.version}</version>
	        </dependency>
	        <dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>cryptography</artifactId>
				<version>${plmm.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>plmm-utils</artifactId>
				<version>${plmm.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>redis</artifactId>
				<version>${plmm.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>redis-session</artifactId>
				<version>${plmm.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>localcache</artifactId>
				<version>${plmm.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpcore</artifactId>
				<version>${httpcore.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>webmvc</artifactId>
				<version>${plmm.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>security</artifactId>
				<version>${plmm.version}</version>
			</dependency>
			<dependency>
				<groupId>com.plmm</groupId>
				<artifactId>vo-security</artifactId>
				<version>${plmm.version}</version>
			</dependency>
		    <dependency>
		        <groupId>io.swagger</groupId>
		        <artifactId>swagger-models</artifactId>
		        <version>${io.swagger.version}</version>
		    </dependency>
	       <dependency>
	          <groupId>io.swagger</groupId>
	          <artifactId>swagger-annotations</artifactId>
	          <version>${io.swagger.version}</version>
	       </dependency>
        <dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<classifier>jdk15</classifier>
			<version>${json-lib.version}</version>
		</dependency>
	      <dependency>
	          <groupId>org.json</groupId>
	          <artifactId>json</artifactId>
	          <version>${json.version}</version>
	      </dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons-lang.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons-beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk15on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${quartz.version}</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz-jobs</artifactId>
				<version>${quartz.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sf.dozer</groupId>
				<artifactId>dozer</artifactId>
				<version>${dozer.version}</version>
			</dependency>
			<dependency>
				<groupId>com.zxing</groupId>
				<artifactId>zxing-core</artifactId>
				<version>${zxing.version}</version>
			</dependency>
			<dependency>
				<groupId>com.zxing</groupId>
				<artifactId>zxing-javase</artifactId>
				<version>${zxing.version}</version>
			</dependency>

			<!-- swagger2 rest api -->
	        <dependency>
	            <groupId>io.springfox</groupId>
	            <artifactId>springfox-swagger2</artifactId>
	            <version>${springfox-swagger2.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>io.springfox</groupId>
	            <artifactId>springfox-swagger-ui</artifactId>
	            <version>${springfox-swagger2.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.github.xiaoymin</groupId>
	            <artifactId>swagger-bootstrap-ui</artifactId>
	            <version>${swagger-bootstrap-ui.version}</version>
	        </dependency>
			<!-- 整合dubbo -->
	        <dependency>
	            <groupId>org.apache.dubbo</groupId>
	            <artifactId>dubbo-spring-boot-starter</artifactId>
	            <version>${apache.dubbo.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.dubbo</groupId>
	            <artifactId>dubbo</artifactId>
	            <version>${apache.dubbo.version}</version>
	        </dependency>
	        <dependency>
		        <groupId>org.apache.dubbo</groupId>
		        <artifactId>dubbo-dependencies-zookeeper</artifactId>
	            <version>${apache.dubbo.version}</version>
		        <type>pom</type>
		        <exclusions>
		        	<exclusion>
		        		<groupId>org.slf4j</groupId>
		        		<artifactId>slf4j-log4j12</artifactId>
		        	</exclusion>
		        </exclusions>
	        </dependency>
			<!-- 整合Apollo -->
			<dependency>
				<groupId>com.ctrip.framework.apollo</groupId>
				<artifactId>apollo-client</artifactId>
				<version>${apollo.client.version}</version>
			</dependency>
			<!-- 整合spring-cloud-context为Apollo的@RefreshScope增加支持 -->
			<dependency>
			    <groupId>org.springframework.cloud</groupId>
			    <artifactId>spring-cloud-context</artifactId>
			    <version>${spring-cloud-context.version}</version>
			</dependency>
			<!-- mysql -->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${mybatis-spring.version}</version>
			</dependency>
	        <dependency>
	            <groupId>org.mybatis.spring.boot</groupId>
	            <artifactId>mybatis-spring-boot-starter</artifactId>
	            <version>${mybatis-spring-boot-starter.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>mysql</groupId>
	            <artifactId>mysql-connector-java</artifactId>
	            <version>${mysql-connector-java.version}</version>
	        </dependency>

		</dependencies>
	</dependencyManagement>
	
	
	<build>
		<plugins>
			<!-- <plugin> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-maven-plugin</artifactId> 
				</plugin> -->
			<!-- 版本号修改插件 -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding><!-- 指定编码格式，否则在DOS下运行mvn compile命令时会出现莫名的错误，因为系统默认使用GBK编码 -->
				</configuration>
			</plugin>
		</plugins>
	</build>
	
  <profiles>
		<profile>
			<id>local</id>
			<properties>
				<runtime.env>src/main/resources/env/local</runtime.env>
			</properties>
		</profile>
		<profile>
			<id>dev</id>
			<properties>
				<runtime.jarname>dev</runtime.jarname>
				<runtime.env>src/main/resources/env/dev</runtime.env>
			</properties>
		</profile>
		<profile>
			<id>sit</id>
			<properties>
				<runtime.env>src/main/resources/env/sit</runtime.env>
			</properties>
		</profile>
		<profile>
			<id>uat</id>
			<properties>
				<runtime.jarname>uat</runtime.jarname>
				<runtime.env>src/main/resources/env/uat</runtime.env>
			</properties>
		</profile>
		<profile>
			<id>ft</id>
			<properties>
				<runtime.env>src/main/resources/env/ft</runtime.env>
			</properties>
		</profile>
		<profile>
			<id>pro</id>
			<properties>
				<runtime.jarname>pro</runtime.jarname>
				<runtime.env>src/main/resources/env/pro</runtime.env>
			</properties>
		</profile>
	</profiles>
	
</project>